[gd_scene load_steps=6 format=3 uid="uid://d0wv2ra1y78g8"]

[ext_resource type="Texture2D" uid="uid://ctaf17lmt7byx" path="res://Textures/Station Module 2.png" id="1_d5nxv"]
[ext_resource type="Script" path="res://Scripts/CollaborationModule.gd" id="2_52n27"]
[ext_resource type="Texture2D" uid="uid://b0ain611op15o" path="res://Textures/SnapBall.png" id="2_qbjla"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84xqh"]
size = Vector2(139, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn15o"]
size = Vector2(1.04835, 1.7818)

[node name="CollaborationModule" type="Node2D"]

[node name="StationModule" type="Sprite2D" parent="."]
texture = ExtResource("1_d5nxv")
script = ExtResource("2_52n27")

[node name="damagedTimer" type="Timer" parent="StationModule"]

[node name="updateTimer" type="Timer" parent="StationModule"]
wait_time = 20.0
autostart = true

[node name="CollisionHolder" type="Area2D" parent="."]

[node name="hitBox" type="CollisionShape2D" parent="CollisionHolder"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_84xqh")

[node name="ConnectRight" type="Area2D" parent="."]
position = Vector2(76, 0)
collision_layer = 2
collision_mask = 2

[node name="ConnectBox" type="CollisionShape2D" parent="ConnectRight"]
shape = SubResource("RectangleShape2D_kn15o")
debug_color = Color(0.947184, 4.52429e-06, 0.58429, 0.42)

[node name="SnapBall" type="TextureRect" parent="ConnectRight"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qbjla")

[node name="ConnectLeft" type="Area2D" parent="."]
position = Vector2(-76, 0)
collision_layer = 2
collision_mask = 2

[node name="SnapBall" type="TextureRect" parent="ConnectLeft"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -7.51092
offset_right = 24.0
offset_bottom = 24.4891
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qbjla")

[node name="ConnectBox2" type="CollisionShape2D" parent="ConnectLeft"]
shape = SubResource("RectangleShape2D_kn15o")
debug_color = Color(0.947184, 4.52429e-06, 0.58429, 0.42)

[node name="ConnectTop" type="Area2D" parent="."]
position = Vector2(20, -46)
collision_layer = 2
collision_mask = 2

[node name="SnapBall" type="TextureRect" parent="ConnectTop"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -7.51092
offset_right = 24.0
offset_bottom = 24.4891
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qbjla")

[node name="ConnectBox2" type="CollisionShape2D" parent="ConnectTop"]
shape = SubResource("RectangleShape2D_kn15o")
debug_color = Color(0.947184, 4.52429e-06, 0.58429, 0.42)

[node name="ConnectBottom" type="Area2D" parent="."]
position = Vector2(20, 46)
collision_layer = 2
collision_mask = 2

[node name="SnapBall" type="TextureRect" parent="ConnectBottom"]
visible = false
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -7.51092
offset_right = 24.0
offset_bottom = 24.4891
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qbjla")

[node name="ConnectBox2" type="CollisionShape2D" parent="ConnectBottom"]
shape = SubResource("RectangleShape2D_kn15o")
debug_color = Color(0.947184, 4.52429e-06, 0.58429, 0.42)

[connection signal="timeout" from="StationModule/updateTimer" to="StationModule" method="_on_update_timer_timeout"]
[connection signal="area_entered" from="ConnectRight" to="StationModule" method="_on_connect_right_area_entered"]
[connection signal="area_entered" from="ConnectLeft" to="StationModule" method="_on_connect_left_area_entered"]
[connection signal="area_entered" from="ConnectTop" to="StationModule" method="_on_connect_top_area_entered"]
[connection signal="area_entered" from="ConnectBottom" to="StationModule" method="_on_connect_bottom_area_entered"]
